--- a/roncoo-pay-service-message/pom.xml
+++ b/roncoo-pay-service-message/pom.xml
@@ -118,7 +118,7 @@
 						<configuration>
 							<type>jar</type>
 							<includeTypes>jar</includeTypes>
-							<useUniqueVersions>false</useUniqueVersions>
+							<!--<useUniqueVersions>false</useUniqueVersions>-->
 							<outputDirectory>
 								${project.build.directory}/lib
 							</outputDirectory>
